# cloudpoint2deprgb

cloudpoint2deprgb/: CMakeLists.txt  CMakeLists.txt~  ReadMe.txt  pointcloud.pcd
cloudpoint2deprgb/.kdev4/: cloudpoint2deprgb.kdev4
cloudpoint2deprgb/src/: point2rgb.cpp
